# image-builder

./: .gitignore  .gitlab-ci.yml  Dockerfile  pyproject.toml
.bin/: deploy.py  dummy.yaml
images/capi/: .dockerignore  .envrc  Dockerfile  Makefile
images/capi/ansible/: bm-node.yml  inventory.ini  node.yml
images/capi/ansible/bm-files/: iscsi.sh  kube-vip-t1.yaml  kubeadm-t1.yaml  kubeadm-worker-join-t1.yaml
images/capi/ansible/bm-vars/: cni.yaml  containerd.yaml  goss-args.yaml  kubernetes.yaml
images/capi/hack/: ensure-ansible.sh  image-build-ova.py  ovf_template.xml
images/capi/packer/config/: cni-v0.7.5.json  cni-v0.7.6.json  cni-v0.9.1.json  containerd-1.3.3.json  containerd-1.3.4.json  containerd-1.4.1.json  containerd-1.4.2.json  containerd-1.4.3.json  containerd-1.4.4.json  containerd-1.4.5.json  containerd-1.4.6.json  containerd-1.5.4.json  containerd-1.5.6.json  containerd-1.5.8.json  containerd-1.6.18.json  containerd-1.6.19.json  containerd-1.6.4.json  containerd-1.6.6.json  containerd-1.7.0.json  containerd-1.7.1.json  containerd-1.7.12.json  containerd-1.7.13.json  containerd-1.7.2.json  kubernetes-v1.15.11.json  kubernetes-v1.16.2.json  kubernetes-v1.16.9.json  kubernetes-v1.17.14.json  kubernetes-v1.17.5 copy.json  kubernetes-v1.17.5.json  kubernetes-v1.18.10.json  kubernetes-v1.18.12.json  kubernetes-v1.18.2.json  kubernetes-v1.18.6.json  kubernetes-v1.19.2.json  kubernetes-v1.19.3.json  kubernetes-v1.19.4.json  kubernetes-v1.19.6.json  kubernetes-v1.19.7.json  kubernetes-v1.19.8.json  kubernetes-v1.19.9.json  (+77 more)
(+107 files in other folders)
